# ruzzle

./: Cargo.toml  build.rs  build_shaders.sh
src/: config.rs  lib.rs  main.rs  paths.rs  tetrominos.rs
src/engine/: entity.rs  error.rs  gpu.rs  mod.rs
src/engine/entities/: bg_entity.rs  entity_builder.rs  geo_entity.rs  mod.rs
src/shaders/: background.frag.glsl  geometry.vert.glsl
