[package]
name = "ruzzle"
version = "0.1.0"
authors = ["nils måsén <nils@piksel.se>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["lyon/serialization", "lyon/svg"]

[dependencies]
lyon = { version = "0.17.5", features = ["extra"] }
env_logger = "0.9.0"
log = "0.4"

wgpu = "0.9.0"
winit = "0.25.0"
futures = "0.3.5"
bytemuck = "1.2.0"
rand = "0.8.4"
lazy_static = "1.4.0"

[build-dependencies]
glsl-to-spirv = "0.1.7"